--- a/website/.env.example
+++ b/website/.env.example
@@ -3,5 +3,5 @@ DB_PASSWORD="databasePassword"
 DB_HOST="localhost"
 DB_PORT="5432"
 DB_NAME="databaseName"
-HOME_PATH ="/"
+HOME_PATH ="/localhost"
 SENDGRID_API_KEY=""
